feat: adicionando nova funcionalidade de visualizados recente
